// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing-plugin-bff setJestConfigForBFF 1`] = `
Object {
  "projects": Array [
    Object {
      "globals": Object {
        "modern_bff_info": Object {
          "appDir": "/packages/runtime/plugin-testing/tests/bff/fixtures/bff1",
          "modernUserConfig": Object {},
          "plugins": Array [],
          "routes": Array [],
        },
        "ts-jest": Object {
          "diagnostics": Object {
            "warnOnly": true,
          },
        },
      },
      "moduleNameMapper": Object {},
      "resolver": "/packages/runtime/plugin-testing/src/base/config/resolver.ts",
      "rootDir": "/packages/runtime/plugin-testing/tests/bff/fixtures/bff1/api",
      "setupFilesAfterEnv": Array [
        "/packages/runtime/plugin-testing/src/cli/bff/setup.ts",
      ],
      "testEnvironment": "node",
      "testMatch": Array [
        "**/api/**/*.test.[jt]s",
      ],
      "transform": Object {
        "\\\\.[jt]sx?$": "/node_modules/.pnpm/ts-jest@27.1.5_tkwrfpzxuuodqdl725tmayz3ue/node_modules/ts-jest/dist/index.js",
      },
    },
  ],
}
`;

exports[`testing-plugin-bff testTimeout should not set in projects 1`] = `
Object {
  "projects": Array [
    Object {
      "globals": Object {
        "modern_bff_info": Object {
          "appDir": "/packages/runtime/plugin-testing/tests/bff/fixtures/bff1",
          "modernUserConfig": Object {},
          "plugins": Array [],
          "routes": Array [],
        },
        "ts-jest": Object {
          "diagnostics": Object {
            "warnOnly": true,
          },
        },
      },
      "moduleNameMapper": Object {},
      "resolver": "/packages/runtime/plugin-testing/src/base/config/resolver.ts",
      "rootDir": "/packages/runtime/plugin-testing/tests/bff/fixtures/bff1/api",
      "setupFilesAfterEnv": Array [
        "/packages/runtime/plugin-testing/src/cli/bff/setup.ts",
      ],
      "testEnvironment": "node",
      "testMatch": Array [
        "**/api/**/*.test.[jt]s",
      ],
      "transform": Object {
        "\\\\.[jt]sx?$": "/node_modules/.pnpm/ts-jest@27.1.5_tkwrfpzxuuodqdl725tmayz3ue/node_modules/ts-jest/dist/index.js",
      },
    },
  ],
  "testTimeout": 1000,
}
`;
